--- a/cooking.html
+++ b/cooking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalnia:wght@100..700&display=swap" rel="stylesheet">
 
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="img/image.png">
-    <link href="cooking.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/static/img/image.png">
+    <link href="/static/cooking.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
   <body>
@@ -30,14 +30,15 @@
 <!--hero-->
 
 <div class="hero">
-  <h2>talk bout </h2>
-  <p>bio and stuff  to go social media and check events</p>
+  <h2>أهلًا وسهلًا</h2>
+  <p>هذا القسم لا يزال قيد الإنشاء.
+    يمكنك العثور على مزيد من المعلومات في وسائل التواصل الاجتماعي الخاصة بنا.</p>
   <div class="mix">
 <div id="app">
 
 
         <span class="text">
-          <a href="index" class="button-59">go back</a></span>
+          <a href="/templates/index.html" class="button-59">الرجوع </a></span>
         <span class="shimmer"></span>
 
 
@@ -45,7 +46,8 @@
 <div id="app">
 
 
-      <span class="text"> <a href="#" class="button-59"> see more</a></span>
+      <span class="text"> <a href="#" class="button-59">
+        اكتشف المزيد</a></span>
       <span class="shimmer"></span>
 
 
