--- a/cultureHS.html
+++ b/cultureHS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
@@ -14,8 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="img/image.png">
-    <link href="culture.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/static/img/image.png">
+    <link href="/static/culture.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
   <body>
@@ -28,27 +28,27 @@
 
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index">CHABAB'IN</a>
+              <a class="navbar-brand" href="/templates/index.html">CHABAB'IN</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="aboutus">About us</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cooking">Events and Formations</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="cultureHS">Cultural Houses</a>
-                  </li>
 
+                    <li class="nav-item">
+                      <a class="nav-link" href="aboutus.html">حولنا</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="cooking.html">الفعاليات والتكوين</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
+                    </li>
 
-                </ul>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#section1"> انضم إلينا</a>
+                    </li>
+                  </ul>
 
               </div>
             </div>
@@ -62,14 +62,14 @@
  <!--navbar end-->
     <!-- About Us Section -->
 
-    <p class="heading">CSS Gallery</p>
+    <h1 class="heading">المحافظات</h1>
     <div class="gallery-image">
       <div class="img-box">
         <img src="https://picsum.photos/350/250/?image=431" alt="ben arous" />
         <div class="transparent-box">
           <div class="caption">
-            <p>Ben Arous</p>
-            <p class="opacity-low"><a href="details.html">See more </a></p>
+            <p>بن عروس</p>
+            <p class="opacity-low"><a href="/templates/details.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
@@ -77,8 +77,8 @@
         <img src="https://picsum.photos/350/250/?image=431" alt="Tunis" />
         <div class="transparent-box">
           <div class="caption">
-            <p>Tunis</p>
-            <p class="opacity-low"><a href="details.html">See more </a></p>
+            <p>تونس</p>
+            <p class="opacity-low"><a href="/templates/details.html">شاهد المزيد  </a></p>
           </div>
         </div>
       </div>
@@ -86,8 +86,8 @@
         <img src="https://picsum.photos/350/250/?image=431" alt="bizert" />
         <div class="transparent-box">
           <div class="caption">
-            <p>Bizert</p>
-            <p class="opacity-low"><a href="details.html">See more </a></p>
+            <p>بنزرت</p>
+            <p class="opacity-low"><a href="/templates/details.html">شاهد المزيد </a></p>
           </div>
         </div>
       </div>
@@ -95,8 +95,8 @@
         <img src="https://picsum.photos/350/250/?image=431" alt="  nabeul" />
         <div class="transparent-box">
           <div class="caption">
-            <p>Nabeul</p>
-            <p class="opacity-low"><a href="details.html">See more </a></p>
+            <p>أريانة</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
           </div>
         </div>
       </div>
@@ -104,8 +104,163 @@
         <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
         <div class="transparent-box">
           <div class="caption">
-            <p>Sousse</p>
-            <p class="opacity-low"><a href="details.html">See more </a></p>
+            <p>باجة</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>زغوان</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>توزر</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>تطاوين</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>سوسة</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>سليانة</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>سيدي بوزيد
+            </p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>نابل</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>المنستير</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>مدنين</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>منوبة</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>المهدية
+            </p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>الكاف</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>قبلي</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>القصرين</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>القيروان</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>جندوبة</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
+          </div>
+        </div>
+      </div>
+      <div class="img-box">
+        <img src="https://picsum.photos/350/250/?image=431" alt="Sousse" />
+        <div class="transparent-box">
+          <div class="caption">
+            <p>قفصة</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
           </div>
         </div>
       </div>
@@ -113,41 +268,39 @@
         <img src="https://picsum.photos/350/250/?image=431" alt="sfax" />
         <div class="transparent-box">
           <div class="caption">
-            <p>Sfax</p>
-            <p class="opacity-low"><a href="details.html">See more </a></p>
+            <p>قابس</p>
+            <p class="opacity-low"><a href="/templates/details.html">See more </a></p>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- footer and social media section -->
-    <footer class="footer">
-      <div class="row">
-      <div class="col-6 contact">
-        <p>contact Us</p>
-        <p>
-          <a href="#" target="_blank">
-            <i class="fa-brands fa-facebook"></i>
-          </a>
-          <a href="#" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="#" target="_blank">
-            <i class="fa-brands fa-youtube"></i>
-          </a>
-        </p>
+       <!-- footer and social media section -->
+       <footer class="footer">
+        <div class="row">
+        <div class=".col-6 .col-md-4 contact">
+          <p>اتصل بنا</p>
+          <p>
+            <a href="https://www.facebook.com/share/KDHjfrh9BoYyZXif/?mibextid=qi2Omg" target="_blank">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/chabeb.in_?igsh=MWxiY2EzeHhuN3ZnZw==" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://m.youtube.com/@ChabebIn?si=fjsHu4JsOugVt5w3" target="_blank">
+              <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="https://www.tiktok.com/@chabebin?_t=8mqFgqYqtbq&_r=1" target="_blank">
+              <i class="fa-brands fa-tiktok"></i>
+            </a>
+          </p>
+        </div>
+
       </div>
-      <div class="col-6 contact">
-        <p>Our location</p>
-        <p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10630.126613885022!2d10.225304093358726!3d36.747588607781715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd36422e62ef1f%3A0xd28d59bea2235e79!2sBen%20Arous%20Center!5e0!3m2!1sen!2stn!4v1716754300233!5m2!1sen!2stn" width="300" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </p>
-      </div>
-    </div>
-      <div class="copyright">
-        <p>© 2024 created by Eter7 </p>
-      </div>
-    </footer>
+        <div class="copyright">
+          <p>© 2024 created by Eter7 </p>
+        </div>
+      </footer>
     <script>
 
 
@@ -179,16 +332,7 @@
             }, 1);
           }
         });
-        //Switch light/dark
-        $("#switch").on('click', function() {
-          if ($("body").hasClass("dark")) {
-            $("body").removeClass("dark");
-            $("#switch").removeClass("switched");
-          } else {
-            $("body").addClass("dark");
-            $("#switch").addClass("switched");
-          }
-        });
+
       })(jQuery);
       // Your React component code here
     </script>
