--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
@@ -14,11 +14,56 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="img/image.png">
-    <link href="styles.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/img/log0 (1).jpg">
+    <link href="/static/styles.css" rel="stylesheet">
     <title>Chabab'in </title>
   </head>
   <body>
+    <div class="hero">
+        <div class="section full-height">
+            <div class="absolute-center">
+              <div class="section">
+                <div id="hero">
+                <div class="container" >
+                  <div class="row ">
+                    <div class="col-12">
+                      <h1 >
+                        <span>C</span>
+                        <span>h</span>
+                        <span>a</span>
+                        <span>b</span>
+                        <span>a</span>
+                        <span>b</span>
+                        <span>'</span>
+                        <span>i</span>
+                        <span>n</span>
+                                            <br>
+
+
+                      </h1>
+                      <div class="moto">سفراء الثقافة</div>
+                       <p><a href="#section" class="button-55">اكتشف المزيد</a></p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+              </div>
+              <div class="section mt-5" >
+                <div class="container">
+                  <div class="row">
+                    <div class="col-12">
+                      <div id="switch">
+                        <div id="circle"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+    </div>
      <!--navbar-->
     <div class="hero-anime">
       <div class="navigation-wrap bg-light start-header start-style">
@@ -27,31 +72,27 @@
             <div class="col-12">
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="index">CHABAB'IN</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index">Home</a>
+                        <a class="nav-link" href="aboutus.html">حولنا</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="aboutus">About us</a>
+                        <a class="nav-link" href="cooking.html">الفعاليات والتكوين</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="cooking">Events and Formations</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="cultureHS">Cultural Houses</a>
+                        <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
                       </li>
 
-
+                      <li class="nav-item">
+                        <a class="nav-link" href="#section1"> انضم إلينا</a>
+                      </li>
                     </ul>
-                    <form class="d-flex" role="search">
 
-                      <button class="btn btn-outline-success" type="submit"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfebOOjIXZi9m7Zs4BLq3RVcUZedkCAeliVpu_jZMh4Eab42g/viewform?embedded=true"  target="_blank">Join Us</a></button>
-                    </form>
                   </div>
                 </div>
               </nav>
@@ -62,54 +103,33 @@
         </div>
       </div>
        <!--navbarend-->
-      <div class="section full-height">
-        <div class="absolute-center">
-          <div class="section">
-            <div class="container">
-              <div class="row">
-                <div class="col-12">
-                  <h1>
-                    <span>C</span>
-                    <span>h</span>
-                    <span>a</span>
-                    <span>b</span>
-                    <span>a</span>
-                    <span>b</span>
-                    <span>'</span>
-                    <span>i</span>
-                    <span>n</span>
-                                        <br>
-                    <span>*</span>
-                    <span>*</span>
-                    <span>*</span>
-                    <span>*</span>
-                    <span>*</span>
 
-                  </h1>
-                  <p><a href="#section" class="button-55">See More</a></p>
-                </div>
-              </div>
-            </div>
-          </div>
-         
-        </div>
-      </div>
-
-    </div>
     <!-- About Us Section -->
     <section class="py-3 py-md-5" id="section">
       <div class="container">
         <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
           <div class="col-12 col-lg-6 col-xl-5">
-            <img class="img-fluid rounded" loading="lazy" src="img/cult.jpg" alt="About 1" style="margin: 20px;">
+            <img class="img-fluid rounded" loading="lazy" src="/img/memebers.jpeg" alt="About 1" style="margin: 20px;">
           </div>
           <div class="col-12 col-lg-6 col-xl-7">
             <div class="row justify-content-xl-center">
               <div class="col-12 col-xl-11">
-                <h2 class="mb-3">How it started</h2>
-                <p class="mb-5"> Welcome to my startup, Chabab'in ! As an English student with a passion for culture,
-                   I’ve created this platform to share regional cultural events and information. From art and music to traditions and food,
-                    I’m here to bring you a taste of the world’s diverse cultures. Join me on this exciting journey!</p>
+                <h2 class="mb-3">نقدمولكم رواحنا</h2>
+                <div class="mb-5">
+                 نحن مجموعة شباب نحمل حبًا للثقافة والفن والمجتمع المدني.
+                 <mark>
+                  سفراء الثقافة
+                </mark>
+                  هم منصة
+                     تجمع بين الأنشطة والفعاليات الثقافية المنظمة من قبل
+                    7 دور ثقافة ودور شباب موجودين في جميع ولايات بن عروس،
+                    بالإضافة إلى تغطية أنشطة النوادي والمنظمات.
+                </div>
+                <div class="mb-5">
+                 المشروع يعمل على
+                 <strong>  دعم الشباب وتعزيز حضورهم في المؤسسات الشبابية والثقافية بجهاتهم،</strong>
+               وتكوينهم في مجالات صحافة المواطنة، المراسلات الخارجية، وتقنيات التواصل والمونتاج من قبل مؤطرين ومكونين.
+                </div>
               </div>
             </div>
           </div>
@@ -117,169 +137,121 @@
       </div>
     </section>
     <!-- members -->
-    <div class="container" id="section1">
+    <div class="container" >
 
       <div class="row">
-        <h1 class="mb-3">Our Members</h1>
+        <h2 class="mb-3">أعضاؤنا</h2>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="img/members/MM.jpeg">
+              <img class="img-fluid" src="/img/memebers/m1.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">Qods Bouchiba</h3>
+              <h3 class="name">قدس بوشيبا</h3>
             </div>
             <ul class="social">
               <li>
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+                <a href="https://www.facebook.com/share/vXnYEmfWxCKHQJj4/?mibextid=qi2Omg" class="fa fa-facebook" aria-hidden="true"></a>
               </li>
               <li>
-                <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
+                <a href="https://www.instagram.com/qods_bouchiba?igsh=bWo1MHRhOXF3cmVt" class="fa fa-instagram" aria-hidden="true"></a>
               </li>
-              <li>
-                <a href="#" class="fa fa-google-plus" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-linkedin" aria-hidden="true"></a>
-              </li>
+
             </ul>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="img/members/m5.jpeg">
+              <img class="img-fluid" src="/img/memebers/m2.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">dorra</h3>
+              <h3 class="name">درة حجيج</h3>
             </div>
             <ul class="social">
               <li>
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+                <a href="https://www.facebook.com/share/CozoH4uKJs9h1eBA/?mibextid=qi2Omg" class="fa fa-facebook" aria-hidden="true"></a>
               </li>
               <li>
-                <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
+                <a href="https://www.instagram.com/dorra_hja?igsh=bmp5MmZoOHQ5bnRy" class="fa fa-instagram" aria-hidden="true"></a>
               </li>
-              <li>
-                <a href="#" class="fa fa-google-plus" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-linkedin" aria-hidden="true"></a>
-              </li>
+
             </ul>
           </div>
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="img/members/m4.jpeg">
+              <img class="img-fluid" src="/img/memebers/m3.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">Eya Bahri</h3>
+              <h3 class="name">ميلامين دايموند</h3>
             </div>
             <ul class="social">
               <li>
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+                <a href="https://www.facebook.com/melanine.diamond?mibextid=qi2Omg&rdid=0TerIEfKZ91eKAvb" class="fa fa-facebook" aria-hidden="true"></a>
               </li>
               <li>
-                <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
+                <a href="https://www.instagram.com/melanin_diamond?igsh=MXIxOHRieG9uYXh4eg%3D%3D" class="fa fa-instagram" aria-hidden="true"></a>
               </li>
-              <li>
-                <a href="#" class="fa fa-google-plus" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-linkedin" aria-hidden="true"></a>
-              </li>
+
             </ul>
           </div>
         </div>
+
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="img/members/m3.jpeg">
+              <img class="img-fluid" src="/img/memebers/m4.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">Med Ghofran Jelassi</h3>
+              <h3 class="name">آمنة بلخيرات</h3>
             </div>
             <ul class="social">
               <li>
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+                <a href="https://www.facebook.com/share/cjitKsELvy84mk9R/?mibextid=qi2Omg" class="fa fa-facebook" aria-hidden="true"></a>
               </li>
-              <li>
-                <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-google-plus" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-linkedin" aria-hidden="true"></a>
-              </li>
+
             </ul>
           </div>
         </div>
-        <div class="col-6 ">
+        <div class=".col-6 .col-md-4">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="img/members/m2.jpeg">
+              <img class="img-fluid" src="/img/memebers/m5.jpeg">
             </div>
             <div class="team-content">
-              <h3 class="name">Emna Belkhayrat</h3>
+              <h3 class="name">محمد عمر العبيدي</h3>
             </div>
             <ul class="social">
               <li>
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+                <a href="https://www.facebook.com/share/Q2tx3tfT6h1DNXAd/?mibextid=qi2Omg" class="fa fa-facebook" aria-hidden="true"></a>
               </li>
               <li>
-                <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
+                <a href="https://www.instagram.com/medomarabidi?igsh=MTc1MmFhOHVuZGI4MQ==" class="fa fa-instagram" aria-hidden="true"></a>
               </li>
-              <li>
-                <a href="#" class="fa fa-google-plus" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-linkedin" aria-hidden="true"></a>
-              </li>
+
             </ul>
           </div>
         </div>
-        <div class="col-6 ">
-          <div class="our-team">
-            <div class="picture">
-              <img class="img-fluid" src="members/m1.jpeg">
-            </div>
-            <div class="team-content">
-              <h3 class="name">Med Omar Abidi</h3>
-            </div>
-            <ul class="social">
-              <li>
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-google-plus" aria-hidden="true"></a>
-              </li>
-              <li>
-                <a href="#" class="fa fa-linkedin" aria-hidden="true"></a>
-              </li>
-            </ul>
-          </div>
+
         </div>
       </div>
     </div>
     <!-- how it started -->
     <section class="py-3 py-md-5" id="section1">
-      <div class="container">
-        <div class="row justify-content-center text-center">
+      <div class="container" >
+
+        <div class="row justify-content-center text-center" >
           <div class="col-xxl-4 gy-3 gy-md-4 gy-lg-0">
-            <h1>
-             JOIN OUR TEAM NOW
+            <h1 class="join">
+                انضم إلى فريقنا الآن
 
 
             </h1>
-            <p><strong>For better opportunities.</strong></p>
+            <p><strong>للحصول على فرص أفضل.</strong></p>
 
-            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfebOOjIXZi9m7Zs4BLq3RVcUZedkCAeliVpu_jZMh4Eab42g/viewform?embedded=true" class="button-55" target="_blank">Learn More</a></p>
+            <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfebOOjIXZi9m7Zs4BLq3RVcUZedkCAeliVpu_jZMh4Eab42g/viewform?embedded=true" class="button-55" target="_blank">شاهد المزيد</a></p>
 
           </div>
         </div>
@@ -288,24 +260,27 @@
     <!-- footer and social media section -->
     <footer class="footer">
       <div class="row">
-      <div class="col-6 contact">
-        <p>contact Us</p>
+      <div class="col-6 contact col-12 col-lg-6 col-xl-7">
+        <p>اتصل بنا</p>
         <p>
-          <a href="#" target="_blank">
+          <a href="https://www.facebook.com/share/KDHjfrh9BoYyZXif/?mibextid=qi2Omg" target="_blank">
             <i class="fa-brands fa-facebook"></i>
           </a>
-          <a href="#" target="_blank">
+          <a href="https://www.instagram.com/chabeb.in_?igsh=MWxiY2EzeHhuN3ZnZw==" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="#" target="_blank">
+          <a href="https://m.youtube.com/@ChabebIn?si=fjsHu4JsOugVt5w3" target="_blank">
             <i class="fa-brands fa-youtube"></i>
+          </a>
+          <a href="https://www.tiktok.com/@chabebin?_t=8mqFgqYqtbq&_r=1" target="_blank">
+            <i class="fa-brands fa-tiktok"></i>
           </a>
         </p>
       </div>
-      <div class="col-6 contact">
-        <p>Our location</p>
+      <div class="col-12 col-lg-6 col-xl-5 contact">
+        <p>موقعنا</p>
         <p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10630.126613885022!2d10.225304093358726!3d36.747588607781715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd36422e62ef1f%3A0xd28d59bea2235e79!2sBen%20Arous%20Center!5e0!3m2!1sen!2stn!4v1716754300233!5m2!1sen!2stn" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.0212879681594!2d10.216397800000001!3d36.7460601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd378e4475e825%3A0x82c9dff6626f12fd!2sCentre%20culturel%20et%20sportif%20pour%20les%20jeunes%20%C3%A0%20Ben%20Arous!5e0!3m2!1sen!2stn!4v1719764258983!5m2!1sen!2stn" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </p>
       </div>
     </div>
@@ -335,8 +310,7 @@
           $('body.hero-anime').removeClass('hero-anime');
         });
 
-        //Switch light/dark
-       
+
       })(jQuery);
       // Your React component code here
     </script>
