--- a/details.html
+++ b/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
@@ -14,8 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- https://favicon.io/emoji-favicons/money-bag/ -->
-    <link rel="icon" type="image/x-icon" href="img/image.png">
-    <link href="details.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/static/img/image.png">
+    <link href="/static/details.css" rel="stylesheet">
     <title>Chabab'in about us</title>
   </head>
   <body>
@@ -26,27 +26,27 @@
             <div class="col-12">
               <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="index">CHABAB'IN</a>
+                  <a class="navbar-brand" href="/templates/index.html">CHABAB'IN</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="aboutus">About us</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="cooking">Events and Formations</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="cultureHS">Cultural Houses</a>
-                      </li>
 
+                        <li class="nav-item">
+                          <a class="nav-link" href="aboutus.html">حولنا</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="cooking.html">الفعاليات والتكوين</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="cultureHS.html">المنظمات الثقافية</a>
+                        </li>
 
-                    </ul>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#section1"> انضم إلينا</a>
+                        </li>
+                      </ul>
 
                   </div>
                 </div>
@@ -58,11 +58,11 @@
 
 
     </div>
-    <h1>houses</h1>
+    <h1>دار الثقافة</h1>
     <div id="columns">
 
       <figure>
-      <img src="img/Captmap.png" alt="house map pic">
+      <img src="/static/img/Captmap.png" alt="house map pic">
       <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -71,7 +71,7 @@
       </figure>
 
       <figure>
-        <img src="img/Captmap.png" alt="house map pic">
+        <img src="/static/img/Captmap.png" alt="house map pic">
     <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -80,7 +80,7 @@
       </figure>
 
       <figure>
-        <img src="img/Captmap.png" alt="house map pic">
+        <img src="/static/img/Captmap.png" alt="house map pic">
       <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -89,7 +89,7 @@
       </figure>
 
       <figure>
-        <img src="img/Captmap.png" alt="house map pic">
+        <img src="/static/img/Captmap.png" alt="house map pic">
     <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -98,7 +98,7 @@
       </figure>
 
        <figure>
-        <img src="img/Captmap.png" alt="house map pic">
+        <img src="/static/img/Captmap.png" alt="house map pic">
     <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -107,7 +107,7 @@
       </figure>
 
        <figure>
-        <img src="img/Captmap.png" alt="house map pic">
+        <img src="/static/img/Captmap.png" alt="house map pic">
       <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -116,7 +116,7 @@
       </figure>
 
       <figure>
-        <img src="img/Captmap.png" alt="house map pic">
+        <img src="/static/img/Captmap.png" alt="house map pic">
       <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -125,7 +125,7 @@
       </figure>
 
        <figure>
-        <img src="img/Captmap.png" alt="house map pic">
+        <img src="/static/img/Captmap.png" alt="house map pic">
       <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -134,7 +134,7 @@
       </figure>
 
         <figure>
-          <img src="img/Captmap.png" alt="house map pic">
+          <img src="/static/img/Captmap.png" alt="house map pic">
         <figcaption>name
         <p>address//number</p>
          <p>see more (fb)</p>
@@ -148,25 +148,32 @@
 
 
     <!-- footer and social media section -->
-    <div class="footer">
-      <div class="contact">
-        <p>contact Us</p>
+     <!-- footer and social media section -->
+     <footer class="footer">
+      <div class="row">
+      <div class=".col-6 .col-md-4 contact">
+        <p>اتصل بنا</p>
         <p>
-          <a href="#" target="_blank">
+          <a href="https://www.facebook.com/share/KDHjfrh9BoYyZXif/?mibextid=qi2Omg" target="_blank">
             <i class="fa-brands fa-facebook"></i>
           </a>
-          <a href="#" target="_blank">
+          <a href="https://www.instagram.com/chabeb.in_?igsh=MWxiY2EzeHhuN3ZnZw==" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="#" target="_blank">
+          <a href="https://m.youtube.com/@ChabebIn?si=fjsHu4JsOugVt5w3" target="_blank">
             <i class="fa-brands fa-youtube"></i>
+          </a>
+          <a href="https://www.tiktok.com/@chabebin?_t=8mqFgqYqtbq&_r=1" target="_blank">
+            <i class="fa-brands fa-tiktok"></i>
           </a>
         </p>
       </div>
+
+    </div>
       <div class="copyright">
         <p>© 2024 created by Eter7 </p>
       </div>
-    </div>
+    </footer>
     <script>
 
 
@@ -189,16 +196,7 @@
           $('body.hero-anime').removeClass('hero-anime');
         });
   //Animation
-        //Switch light/dark
-        $("#switch").on('click', function() {
-          if ($("body").hasClass("dark")) {
-            $("body").removeClass("dark");
-            $("#switch").removeClass("switched");
-          } else {
-            $("body").addClass("dark");
-            $("#switch").addClass("switched");
-          }
-        });
+       
       })(jQuery);
       // Your React component code here
     </script>
